Merge pull request #41
* feature: migrate brokerage-provider, inventory-management-service and stock-exchange-service into api-gateway-service